<resources xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingTranslation">

    <string name="app_name">GTD</string>
    <string name="cancle">取消</string>
    <string name="title">请选择时间</string>
    <string name="commit">确定</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="hour">时</string>
    <string name="minute">分</string>
    <string name="select_date">选择日期</string>
    <string name="current_date">当前日期</string>
    <string name="select_time">选择时间</string>
    <string name="alarm_time">提醒时间</string>

    <string name="select_content">选择事件</string>

    <string name="edit">编辑</string>
    <string name="select_all">全选</string>
    <string name="not_select_all">全不选</string>
    <string name="delete">删除</string>

    <string name="schedule">日程</string>

    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="alarm">提醒!!!</string>
    <string name="areYouSure">确定要删除已选中的事件吗？</string>
    <string name="areYouSureToQuit">确定不保存修改吗？</string>
    <string name="alarmContentIsNull">内容不能为空!!!</string>
    <string name="cannotSelectNothing">你还没选择要删除的事情!!!</string>

    <string name="inbox">整理</string>
    <string name="set">设置</string>
    <string name="review">回顾</string>
    <string name="recycle_bin">回收站</string>
    <string name="night_day_mode">夜间/日间模式</string>
    <string name="language">中文/英文切换</string>

    <string name="save">保存修改</string>
    <string name="save_en">save change</string>
    <string name="name">姓名</string>
    <string name="name_en">name</string>
    <string name="address">地址</string>
    <string name="address_en">address</string>
    <string name="phone">电话</string>
    <string name="phone_en">phone</string>
    <string name="sex">性别</string>
    <string name="sex_en">sex</string>
    <string name="man">男</string>
    <string name="man_en">man</string>
    <string name="woman">女</string>
    <string name="woman_en">woman</string>
    <string name="open_album">打开相册</string>
    <string name="open_album_en">open album</string>
    <string name="open_camera">打开相机</string>
    <string name="open_camera_en">open camera</string>

    <string name="not_add_anthing">还没有添加任何事件</string>
    <string name="not_add_anthing_en">have not add anything</string>

    <string name="inbox_en">INBOX</string>
    <string name="set_en">SET</string>
    <string name="review_en">REVIEW</string>
    <string name="recycle_bin_en">RECYCLE_BIN</string>
    <string name="night_day_mode_en">NIGHT/DAY_MODE</string>
    <string name="language_en">ZH/EN_CHANGE</string>

    <string name="edit_en">EDIT</string>
    <string name="select_all_en">SELECT_ALL</string>
    <string name="not_select_all_en">NOT_SELECT_ALL</string>
    <string name="delete_en">DELETE</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="net_error">网络异常</string>
    <string name="refresh_success">刷新成功</string>
    <string name="no_data">暂无数据</string>

    <string name="login_success">登陆成功</string>
    <string name="login">LOGIN</string>
    <string name="Username">用户名</string>
    <string name="Password">密码</string>
    <string name="forgot_your_password">忘记密码 ?</string>
    <string name="go">登录</string>
    <string name="repeat_password">请再次输入密码</string>
    <string name="next">确定</string>
    <string name="register">REGISTER</string>

    <string name="title_home">主页</string>
    <string name="title_dashboard">历史</string>
    <string name="title_notifications">通知</string>

    <string name="button_text_start">开始</string>
    <string name="button_text_redo">重新完成</string>

    <string name="nodata">暂未添加事件</string>

    <string name="button_text_start_en">START</string>
    <string name="button_text_redo_en">REDO</string>

    <string name="done">【已完成】</string>
    <string name="undo">【未完成】</string>

    <string name="vibration">开启震动</string>
    <string name="tone">开启提示音</string>
    <string name="select_music">选择音乐</string>
    <string name="music1">音乐1</string>
    <string name="music2">音乐2</string>
    <string name="music3">音乐3</string>
    <string name="music4">音乐4</string>


    <item name="visible" type="id" />
    <item name="masked" type="id" />
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>


</resources>
