<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:checkableBehavior="single"
        android:id="@+id/group1">
        <item
            android:id="@+id/inbox_item"
            android:title="@string/inbox"
            android:icon="@drawable/inbox"/>
        <item
            android:id="@+id/set_item"
            android:title="@string/set"
            android:icon="@drawable/set"/>
        <item
            android:id="@+id/review"
            android:title="@string/review"
            android:icon="@drawable/review"/>
    </group>


    <group
        android:checkableBehavior="single"
        android:id="@+id/group3">
        <item
            android:id="@+id/mode"
            android:title="@string/night_day_mode"
            android:icon="@drawable/night">
        </item>

    </group>

    <group
        android:checkableBehavior="single"
        android:id="@+id/group4">
        <item
            android:id="@+id/language"
            android:title="@string/language"
            android:icon="@drawable/cn_en">
        </item>

    </group>

</menu>